<resources>
    <string name="app_name">NetworkAnalyzer</string>

    <!-- super permission-->
    <string name="category_hack">System and apps</string>

    <string name="title_grant_super">Grant root permission</string>
    <string name="summary_grant_super">This app should grant root permission</string>
    <string name="summary_super_granted">Root permission granted</string>
    <string name="dlg_title_grant_super_failed">Root failed</string>
    <string name="dlg_msg_grant_super_failed">Grant root permission failed, please open root permission for NetworkAnalyzer in SecurityCenter and reboot me!</string>
    <string name="dlg_go_now">Go now</string>
    <string name="info_no_super">Please grant root permission first!</string>

    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_abort">Abort</string>
    <string name="dlg_continue">Continue</string>

    <!-- wechat xlog -->
    <string name="title_xlog_hack">One key hack wechat</string>
    <string name="summary_xlog_hack">Show wechat xlog in logcat</string>
    <string name="summary_xlog_hack_running">Hacking process is running...</string>
    <string name="summary_xlog_hack_hacked">Wechat is hacked</string>
    <string name="summary_xlog_hack_failed">Wechat hack failed, try again</string>
    <string name="dlg_title_xlog_hack">Hack wechat</string>
    <string name="dlg_msg_xlog_hack_warning">Hack wechat may cause wechat stop, are you sure to continue?</string>

    <string name="category_logcat">Logcat configure</string>
    <string name="title_logcat_monitor">Logcat monitor</string>
    <string name="summary_logcat_monitor">Capture logs into specified files</string>
    <string name="summary_logcat_monitor_running">Logcat monitor is running...</string>
    <string name="title_logcat_monitor_run">Run logcat monitor</string>
    <string name="title_logcat_store">File storage location</string>
    <string name="summary_logcat_store_default">/sdcard/NetworkAnalyzer/logcat</string>

    <string name="category_monitor">Network monitor</string>
    <string name="title_message_delay">Message delay monitor</string>
    <string name="summary_message_delay">Monitor message delay for wechat or mobile qq</string>
    <string name="summary_message_delay_running">Message delay monitor is running...</string>
    <string name="title_tcpdump">Packet monitor</string>
    <string name="summary_tcpdump">Monitor packet transfer for specific interface</string>
    <string name="summary_tcpdump_running">Packet monitor is running...</string>
    <string name="title_tcp_connection">Tcp connection monitor</string>
    <string name="summary_tcp_connection">Monitor for tcp connection for specific app</string>
    <string name="summary_tcp_connection_running">Tcp connection monitor is running...</string>
    
    <string name="category_message_delay_run">Message delay monitor</string>
    <string name="title_message_delay_run">Run message delay Monitor</string>
    <string name="title_message_delay_store">File storage location</string>
    <string name="summary_message_delay_store_default">/sdcard/network_analyzer</string>
    <string name="title_message_delay_app_select">Interested app selection</string>
    <string name="summary_message_delay_app_non">No app selected</string>
    <string name="title_message_delay_log">Logcat monitor</string>
    <string name="title_message_delay_tcpdump">Packet monitor</string>
    <string name="title_message_delay_tcp_connection">Tcp connection monitor</string>

    <string name="category_tcpdump">Packet monitor</string>
    <string name="title_tcpdump_run">Run packet monitor</string>
    <string name="title_tcpdump_configure_iface">Interface selection</string>
    <string name="default_tcpdump_configure_iface">wlan0</string>
    <string name="title_tcpdump_configure_file_name">Storage file name</string>
    <string name="default_tcpdump_configure_file_name">tcpdump.pcap</string>
    <string name="title_tcpdump_configure_directory">Storage directory</string>

    <string name="starting">Starting</string>
    <string name="start_failed">Start failed</string>
    <string name="stopping">Stopping</string>
    <string name="stop_failed">Stop failed</string>
    <string name="running">Running...</string>
    <string name="closed">Closed</string>
    <string name="configuration">Configuration</string>

    <string name="service_running">NetworkAnalyzer service is running</string>
</resources>
