<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/category_hack">
        <Preference
            android:key="preference_super"
            android:title="@string/title_grant_super"
            android:summary="@string/summary_grant_super" />

        <Preference
            android:key="preference_xlog"
            android:title="@string/title_xlog_hack"
            android:summary="@string/summary_xlog_hack"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_logcat">
        <Preference android:key="preference_logcat"
            android:title="@string/title_logcat_monitor"
            android:summary="@string/summary_logcat_monitor"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_monitor">
        <Preference
            android:key="preference_message_delay"
            android:title="@string/title_message_delay"
            android:summary="@string/summary_message_delay"/>
        <Preference
            android:key="preference_tcpdump"
            android:title="@string/title_tcpdump"
            android:summary="@string/summary_tcpdump"/>
        <Preference
            android:key="preference_tcp_connection"
            android:title="@string/title_tcp_connection"
            android:summary="@string/summary_tcp_connection"/>
    </PreferenceCategory>
</PreferenceScreen>