<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/category_message_delay_run">
        <SwitchPreference
            android:key="preference_message_delay_run"
            android:title="@string/title_message_delay_run"
            android:summary="@string/closed" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/configuration">
        <Preference
            android:key="preference_message_delay_configure_store"
            android:title="@string/title_message_delay_store"
            android:summary="@string/summary_message_delay_store_default"/>
        <Preference
            android:key="preference_message_delay_configure_app"
            android:title="@string/title_message_delay_app_select"
            android:summary="@string/summary_message_delay_app_non"/>
        <CheckBoxPreference
            android:key="preference_message_delay_configure_tcpdump"
            android:title="@string/title_message_delay_tcpdump" />
        <CheckBoxPreference
            android:key="preference_message_delay_configure_tcp_connection"
            android:title="@string/title_message_delay_tcp_connection" />
        <CheckBoxPreference
            android:key="preference_message_delay_configure_log"
            android:title="@string/title_message_delay_log" />
    </PreferenceCategory>

</PreferenceScreen>